--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       </div>
       <div class="row wdRow">
         <div class="col">
-          <p class="text-center intro1">software engineer | web developer</p>
+          <p class="text-center intro1">ui software engineer</p>
         </div>
       </div>
       <div class="row">
         <div class="col">
           <p class="text-center intro1">
-            uc berkeley ext.<br />full stack web development<br />nov '18 - may
+            uc berkeley ext.<br />web development<br />nov '18 - may
             '19
           </p>
         </div>
@@ -81,33 +81,33 @@
           <div class="row">
             <div class="col-6 text-right intro1">experience with:</div>
             <div class="col-6 intro1">
-              html-5, css3, javascript es6, bootstrap, firebase, mysql, mongoDB,
-              react 16+, react hooks
+              html, css, javascript, bootstrap,
+              react 17+, react hooks, react router
             </div>
           </div>
         </div>
       </div>
-      <!-- <div class="row justify-content-center">
+      <div class="row justify-content-center elrRow">
         <div class="col deetsCol">
           <div class="row">
-            <div class="col-6 text-right intro1">looking forward:</div>
+            <div class="col-6 text-right intro1">exposure to:</div>
             <div class="col-6 intro1">
-              python, angular, wordpress
+              angular 1.7, storybook.js, atlassian, mysql, semantic ui, material ui, apis
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
       <br />
       <div class="row justify-content-center">
         <div class="col deetsCol">
           <div class="row">
             <div class="col-6 text-right intro1">related experience:</div>
             <div class="col-6 intro1">
-              <i class="fa fa-cog" aria-hidden="true"></i> jun '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
+               jun '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
             </div>
             <br />            <br />
             <div class="offset-6 col-6 intro1">
-              <i class="fa fa-cog" aria-hidden="true"></i> oct '19 - present<br /><div class="pushOver">dissolved solids | personal project</div>
+               feb '20 - apr '20<br /><div class="pushOver">cybercube | internship</div>
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
       <div class="row projectsRow">
         <div class="col text-center">
           <a class="bottomRow bottomRowProjects textDecorationNone" href="./projects.html"
-            >projects  
+            >projects / certs  
             <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
           </a>
         </div>
@@ -123,7 +123,7 @@
       <div class="row justify-content-center">
         <div class="col-8">
           <div class="row justify-content-center contactRow">
-            <div class="col-12 col-md-4 intro1">
+            <div class="col-12 col-lg-4 intro1">
               <a href="./src/Photos/resume18_4_20.pdf" download>
                 <p class="text-center contactBtn">
                   <i class="fa fa-paperclip" aria-hidden="true"></i>
@@ -131,14 +131,15 @@
                 </p>
               </a>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-lg-4">
               <a href="mailto:david.j.dumas@gmail.com" target="_top">
                 <p class="text-center contactBtn">
-                  <i class="far fa-envelope"></i> david.j.dumas@gmail.com
+                  <i class="far fa-envelope"></i> 
+                    david.j.dumas@gmail.com
                 </p>
               </a>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-lg-4">
               <a href="tel:+1-603-554-6041">
                 <p class="text-center contactBtn">
                   <i class="fas fa-phone-volume"></i> (603)554-6041
