--- a/projects.html
+++ b/projects.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <div class="container-fluid bodyContainer">
-      <div class="row nameRow justify-content-center">
-        <div class="col-12 col-sm-12 col-md-6">
+      <div class="project-body">
+
+        <div class="row nameRow justify-content-center">
+          <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
             <div class="col letter">
               <p>D</p>
@@ -57,74 +59,54 @@
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col text-center bottomRow">
-            <p>
-              The images below are screen shots of the projects I've done,
-              worked on, or am working on. Feel free to explore.
-            </p>
-          </div>
-        </div>
-        <!-- MC Photo -->
+        <!-- Udemy -->
         <div class="row">
           <div class="col text-center">
-            <p class="bottomRow projTitle"><u>MC Photography</u></p>
-            <a href="https://ddumas551.github.io/mcPhoto/">
+            <div class="projectBox">
+              <p class="bottomRow projTitle"><u>Modern React Bootcamp</u></p>
               <img
                 class="fiveStarImg"
-                src="./src/Photos/SmartSelect_20190807-163535_Chrome.gif"
-                alt="michaelPhoto"
-              />
-            </a>
-            <figcaption class="bottomRow">
-              <u>Photography Website -Mobile only per request-</u> <br />Uses
-              Bootstrap
-              <br />
-              Freelance Project || Under Construction
-            </figcaption>
-          </div>
-          <!-- Trail Mix -->
-          <div class="col text-center">
-            <p class="bottomRow projTitle"><u>TrailMix</u></p>
-            <a href="https://ddumas551.github.io/TrailMix/">
-              <img
-                class="fiveStarImg"
-                src="./src/Photos/TrailMix.png"
-                alt="TrailMixSC"
-              />
-            </a>
-            <figcaption class="bottomRow">
-              Location Based Hiking App <br />Uses multiple APIs to find hikes
-              near the user <br />and Firebase for storing user comments.
-
-              <br />
-              Group Project at UCB Ext
-            </figcaption>
+                src="./src/Photos/UdemyModernReact.jpg"
+                alt="Udemy Certificate"
+                />
+              </a>
+              <figcaption class="bottomRow">
+                <u>Course Highlights</u>
+                <br />
+                React concepts, Router, HOC, Hooks, Context
+                <br />
+              </figcaption>
+            </div>
           </div>
           <!-- Dissolved Solids -->
           <div class="col text-center">
             <p class="bottomRow projTitle"><u>Dissolved Solids</u></p>
             <a href="https://github.com/DDumas551/DissolvedSolids">
               <img
-                class="fiveStarImg"
-                src="./src/Photos/DS.jpg"
+              class="fiveStarImg"
+              src="./src/Photos/DS.jpg"
                 alt="DissolvedSolids"
-              />
-            </a>
-            <figcaption class="bottomRow">
+                />
+              </a>
+              <figcaption class="bottomRow">
               Homebrewing Website<br />Will allow users to create, save, edit,
               and delete beer recipes. Includes brewing calculators, checklists,
               and general info on brewing <br />
-              Built in React.js with Bootstrap, Firebase as the database,
-              moment.js to handle time
+              Built in React.js with Bootstrap
               <br />
-              Personal Project || Under Construction
+              Personal Project || On Hold
             </figcaption>
           </div>
         </div>
-        <div class="row bottomRow">
+      </div>
+        <div class="row homeButton">
           <div class="col text-center">
-            <a href="./index.html"><p class="backRow">home</p></a>
+            <a href="./index.html">
+              <p class="backRow">
+                <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
+                home
+              </p>
+            </a>
           </div>
         </div>
       </div>
