Updates projects. Includes Cistercian Numerals

--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,28 @@
               </figcaption>
             </div>
           </div>
+          <!-- Cistercian Numerals -->
+          <div class="col text-center">
+            <p class="bottomRow projTitle"><u>Cistercian Numerals</u></p>
+            <a href="focused-bartik-9cafdf.netlify.app">
+              <img
+              class="fiveStarImg"
+              src="./src/Photos/CistercianNumerals.jpg"
+              alt="Cistercian Numerals"
+              />
+            </a>
+            <figcaption class="bottomRow">
+              React App Using useState Hook<br />Choose a number between 1 and 9999 
+              to see the symbol which represents the number<br />
+              React 17
+              <br/>
+              <br />
+              <a class='linkTo' href="https://github.com/DDumas551/CistercianNums" target="_blank" rel="noreferrer">View the Code</a>
+              <br/>
+              <br/>
+              Personal Project || Complete MVP
+            </figcaption>
+          </div>
           <!-- Dissolved Solids -->
           <div class="col text-center">
             <p class="bottomRow projTitle"><u>Dissolved Solids</u></p>
