--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,24 @@
               </figcaption>
             </div>
           </div>
+            <div class="col text-center">
+              <div class="projectBox">
+                <p class="bottomRow projTitle"><u>Algorithms and Data Structures</u></p>
+                <img
+                  class="fiveStarImg"
+                  src="./src/Photos/DataStructuresAlgs.jpg"
+                  alt="Udemy Certificate"
+                  />
+                </a>
+                <figcaption class="bottomRow">
+                  <u>Course Highlights</u>
+                  <br />
+                  Intro to Big O, Popular Searching/Sorting Techniques, Recursion, Tabulation, and Memoization
+                  <br />
+                </figcaption>
+              </div>
+            </div>
+          
           <!-- Cistercian Numerals -->
           <div class="col text-center">
             <p class="bottomRow projTitle"><u>Cistercian Numerals</u></p>
@@ -91,7 +109,7 @@
             <figcaption class="bottomRow">
               React App Using useState Hook<br />Choose a number between 1 and 9999 
               to see the symbol which represents the number<br />
-              React 17
+              React 17 | Deployed to Netlify
               <br/>
               <br />
               <a class='linkTo' href="https://github.com/DDumas551/CistercianNums" target="_blank" rel="noreferrer">View the Code</a>
