cleans up html and css a bit

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-    crossorigin="anonymous"
-  />
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,97 +25,81 @@
       <div class="row nameRow justify-content-center">
         <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter letter1">
-              <p>D</p>
-            </div>
-            <div class="col letter letter2">
-              <p>A</p>
-            </div>
-            <div class="col letter letter3">
-              <p>V</p>
-            </div>
-            <div class="col letter letter4">
-              <p>I</p>
-            </div>
-            <div class="col letter letter5">
-              <p>D</p>
-            </div>
+            <div class="col letter">D</div>
+            <div class="col letter">A</div>
+            <div class="col letter">V</div>
+            <div class="col letter">I</div>
+            <div class="col letter">D</div>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter letter6">
-              <p>D</p>
-            </div>
-            <div class="col letter letter7">
-              <p>U</p>
-            </div>
-            <div class="col letter letter8">
-              <p>M</p>
-            </div>
-            <div class="col letter  letter9">
-              <p>A</p>
-            </div>
-            <div class="col letter  letter10">
-              <p>S</p>
-            </div>
+            <div class="col letter">D</div>
+            <div class="col letter">U</div>
+            <div class="col letter">M</div>
+            <div class="col letter">A</div>
+            <div class="col letter">S</div>
           </div>
         </div>
       </div>
-      <div class="row wdRow">
+      <div class="row page-text">
         <div class="col">
-          <p class="text-center intro1">ui software engineer</p>
+          <p class="text-center">ui software engineer</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row page-text">
         <div class="col">
-          <p class="text-center intro1">
-            uc berkeley ext.<br />web development<br />nov '18 - may
-            '19
+          <p class="text-center">
+            uc berkeley ext.<br />web development<br />nov '18 - may '19
           </p>
         </div>
       </div>
-      <hr class="hr1" />
-      <div class="row justify-content-center elrRow">
-        <div class="col deetsCol">
+      <hr />
+      <div class="row justify-content-center page-text exp-block">
+        <div class="col">
           <div class="row">
-            <div class="col-6 text-right intro1">experience with:</div>
-            <div class="col-6 intro1">
-              html, css, javascript, bootstrap,
-              react 17+, react hooks, react router
+            <div class="col-6 text-right">experience with:</div>
+            <div class="col-6 col-lg-2">
+              html, css, javascript, bootstrap, react 17+, react hooks, react
+              router
             </div>
           </div>
         </div>
       </div>
-      <div class="row justify-content-center elrRow">
-        <div class="col deetsCol">
+      <div class="row justify-content-center page-text exp-block">
+        <div class="col">
           <div class="row">
-            <div class="col-6 text-right intro1">exposure to:</div>
-            <div class="col-6 intro1">
-              angular 1.7, storybook.js, atlassian, mysql, semantic ui, material ui, apis
+            <div class="col-6 text-right">exposure to:</div>
+            <div class="col-6 col-lg-2">
+              angular 1.7, storybook.js, atlassian, mysql, semantic ui, material
+              ui, apis
             </div>
           </div>
         </div>
       </div>
-      <br />
-      <div class="row justify-content-center">
-        <div class="col deetsCol">
+      <div class="row justify-content-center page-text exp-block">
+        <div class="col">
           <div class="row">
-            <div class="col-6 text-right intro1">related experience:</div>
-            <div class="col-6 intro1">
-               jun '19 - present<br /><div class="pushOver">catchfire creative | freelance</div>
+            <div class="col-6 text-right">related experience:</div>
+            <div class="col-6 ">
+              catchfire creative | freelance | portsmount, nh<br />
+              <div class="pushOver">jun '19 - present</div>
             </div>
-            <br />            <br />
-            <div class="offset-6 col-6 intro1">
-               feb '20 - apr '20<br /><div class="pushOver">cybercube | internship</div>
+            <br />
+            <br />
+            <div class="offset-6 col-6">
+              cybercube | internship | sf, ca<br />
+              <div class="pushOver">feb '20 - apr '20</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row projectsRow">
+      <div class="row projects-row">
         <div class="col text-center">
-          <a class="bottomRow bottomRowProjects textDecorationNone" href="./projects.html"
-            >projects / certs  
+          <a
+            class="projects-link"
+            href="./projects.html"
+            >projects / certs
             <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
           </a>
         </div>
@@ -134,8 +118,8 @@
             <div class="col-12 col-lg-4">
               <a href="mailto:david.j.dumas@gmail.com" target="_top">
                 <p class="text-center contactBtn">
-                  <i class="far fa-envelope"></i> 
-                    david.j.dumas@gmail.com
+                  <i class="far fa-envelope"></i>
+                  david.j.dumas@gmail.com
                 </p>
               </a>
             </div>
@@ -151,35 +135,36 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-8">
-            <div class="row socialRow">
-                <div class="col text-center">
-                  <a href="https://www.twitter.com/djdumas2/" target="_blank">
-                    <i
-                      class="fab fa-twitter contactIcon contactIcon1"
-                      style="font-size:25px"
-                    ></i>
-                  </a>
-                </div>
-                <div class="col text-center">
-                  <a href="https://github.com/ddumas551" target="_blank">
-                    <i
-                      class="fab fa-github contactIcon contactIcon2"
-                      style="font-size:25px"
-                    ></i>
-                  </a>
-                </div>
-                <div class="col text-center">
-                  <a href="https://www.linkedin.com/in/daviddumas551/" target="_blank">
-                    <i
-                      class="fab fa-linkedin contactIcon contactIcon3"
-                      style="font-size:25px"
-                    ></i>
-                  </a>
-                </div>
-              </div>
+          <div class="row socialRow">
+            <div class="col text-center">
+              <a href="https://twitter.com/_davedev" target="_blank">
+                <i
+                  class="fab fa-twitter contactIcon"
+                  style="font-size: 25px"
+                ></i>
+              </a>
+            </div>
+            <div class="col text-center">
+              <a href="https://github.com/ddumas551" target="_blank">
+                <i
+                  class="fab fa-github contactIcon"
+                  style="font-size: 25px"
+                ></i>
+              </a>
+            </div>
+            <div class="col text-center">
+              <a
+                href="https://www.linkedin.com/in/daviddumas551/"
+                target="_blank"
+              >
+                <i
+                  class="fab fa-linkedin contactIcon"
+                  style="font-size: 25px"
+                ></i>
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
-
       </div>
     </div>
 
