Nearly polished landing page

--- a/projects.html
+++ b/projects.html
@@ -10,57 +10,45 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      +
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./src/CSS/projects.css" />
   </head>
   <body>
     <div class="container-fluid bodyContainer">
-      <div class="project-body">
-
-        <div class="row nameRow justify-content-center">
-          <div class="col-12 col-sm-12 col-md-6">
+      <div class="row nameRow justify-content-center">
+        <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter">
-              <p>D</p>
-            </div>
-            <div class="col letter">
-              <p>A</p>
-            </div>
-            <div class="col letter">
-              <p>V</p>
-            </div>
-            <div class="col letter">
-              <p>I</p>
-            </div>
-            <div class="col letter">
-              <p>D</p>
-            </div>
+            <div class="col letter">D</div>
+            <div class="col letter">A</div>
+            <div class="col letter">V</div>
+            <div class="col letter">I</div>
+            <div class="col letter">D</div>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-md-6">
           <div class="row">
-            <div class="col letter">
-              <p>D</p>
-            </div>
-            <div class="col letter">
-              <p>U</p>
-            </div>
-            <div class="col letter">
-              <p>M</p>
-            </div>
-            <div class="col letter">
-              <p>A</p>
-            </div>
-            <div class="col letter">
-              <p>S</p>
-            </div>
+            <div class="col letter">D</div>
+            <div class="col letter">U</div>
+            <div class="col letter">M</div>
+            <div class="col letter">A</div>
+            <div class="col letter">S</div>
           </div>
         </div>
       </div>
       <div class="container">
-        <!-- Udemy -->
         <div class="row">
+          <div class="col-12">
+            <div class="title"></div>
+            <img
+              class="image"
+              src="/src/Photos/CistercianNumerals.jpg"
+              alt="Cistercian Numerals"
+            />
+          </div>
+        </div>
+        <!-- <div class="row">
           <div class="col text-center">
             <div class="projectBox">
               <p class="bottomRow projTitle"><u>Modern React Bootcamp</u></p>
@@ -95,8 +83,6 @@
                 </figcaption>
               </div>
             </div>
-          
-          <!-- Cistercian Numerals -->
           <div class="col text-center">
             <p class="bottomRow projTitle"><u>Cistercian Numerals</u></p>
             <a href="focused-bartik-9cafdf.netlify.app">
@@ -118,7 +104,6 @@
               Personal Project || Complete MVP
             </figcaption>
           </div>
-          <!-- Dissolved Solids -->
           <div class="col text-center">
             <p class="bottomRow projTitle"><u>Dissolved Solids</u></p>
             <a href="https://github.com/DDumas551/DissolvedSolids">
@@ -137,17 +122,16 @@
               Personal Project || On Hold
             </figcaption>
           </div>
-        </div>
+        </div> -->
       </div>
-        <div class="row homeButton">
-          <div class="col text-center">
-            <a href="./index.html">
-              <p class="backRow">
-                <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
-                home
-              </p>
-            </a>
-          </div>
+      <div class="row home-link">
+        <div class="col text-center">
+          <a href="./index.html">
+            <p class="backRow">
+              <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
+              home
+            </p>
+          </a>
         </div>
       </div>
     </div>
