--- a/index.html
+++ b/index.html
@@ -42,100 +42,121 @@
           </div>
         </div>
       </div>
-      <div class="row page-text">
-        <div class="col">
-          <p class="text-center">ui software engineer</p>
+      <div class="second-container">
+        <div class="row page-text job-title">
+          <div class="col">
+            <p class="text-center">ui engineer</p>
+          </div>
         </div>
-      </div>
-      <div class="row page-text">
-        <div class="col">
-          <p class="text-center">
-            uc berkeley ext.<br />web development<br />nov '18 - may '19
-          </p>
+        <div class="row page-text">
+          <div class="col">
+            <p class="text-center">
+              education:<br />uc berkeley extension<br />full stack web
+              development<br />nov '18 - may '19
+            </p>
+          </div>
         </div>
-      </div>
-      <hr />
-      <div class="row justify-content-center page-text exp-block">
-        <div class="col">
-          <div class="row">
-            <div class="col-6 text-right">experience with:</div>
-            <div class="col-6 col-lg-2">
-              html, css, javascript, bootstrap, react 17+, react hooks, react
-              router
+        <hr />
+        <div class="row justify-content-center page-text exp-block">
+          <div class="col">
+            <div class="row">
+              <div class="col-6 text-right">experience with:</div>
+              <div class="col-5 col-sm-4 col-md-3 col-lg-3">
+                html, css, javascript, bootstrap, react 17+, react hooks, react
+                router
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row justify-content-center page-text exp-block">
-        <div class="col">
-          <div class="row">
-            <div class="col-6 text-right">exposure to:</div>
-            <div class="col-6 col-lg-2">
-              angular 1.7, storybook.js, atlassian, mysql, semantic ui, material
-              ui, apis
+        <div class="row justify-content-center page-text exp-block">
+          <div class="col">
+            <div class="row">
+              <div class="col-6 text-right">exposure to:</div>
+              <div class="col-5 col-sm-4 col-md-3 col-lg-3">
+                angular 1.7, storybook.js, atlassian, mysql, semantic ui,
+                material ui, apis
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row justify-content-center page-text exp-block">
-        <div class="col">
-          <div class="row">
-            <div class="col-6 text-right">related experience:</div>
-            <div class="col-6 ">
-              catchfire creative | freelance | portsmount, nh<br />
-              <div class="pushOver">jun '19 - present</div>
-            </div>
-            <br />
-            <br />
-            <div class="offset-6 col-6">
-              cybercube | internship | sf, ca<br />
-              <div class="pushOver">feb '20 - apr '20</div>
+        <div class="row justify-content-center page-text exp-block">
+          <div class="col">
+            <div class="row">
+              <div class="col-6 text-right">work experience:</div>
+              <div class="col-5 col-sm-4 col-md-3">
+                catchfire creative
+                <div class="pushOver">
+                  freelance | portsmouth, nh<br />jun '19 - present
+                </div>
+              </div>
+              <div class="offset-6 col-5 col-sm-4 col-md-3">
+                cybercube
+                <div class="pushOver">
+                  internship | san francisco<br />feb '20 - apr '20
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row projects-row">
-        <div class="col text-center">
-          <a
-            class="projects-link"
-            href="./projects.html"
-            >projects / certs
-            <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
-          </a>
+        <div class="row projects-row">
+          <div class="col text-center">
+            <a class="projects-link" href="./projects.html"
+              >projects / certs
+              <i class="fa fa-arrow-right iLikeToMoveIt" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
+        <div class="row justify-content-center">
+          <div class="col-8">
+            <div class="row justify-content-center contactRow">
+              <div class="col-12 col-lg-4 intro1">
+                <a href="./src/Photos/resume18_4_20.pdf" download>
+                  <p class="text-center contact-button">
+                    <i class="fa fa-paperclip" aria-hidden="true"></i>
+                    Resume
+                  </p>
+                </a>
+              </div>
+              <div class="col-12 col-lg-4">
+                <a href="mailto:david.j.dumas@gmail.com" target="_top">
+                  <p class="text-center contact-button">
+                    <i class="far fa-envelope"></i>
+                    david.j.dumas@gmail.com
+                  </p>
+                </a>
+              </div>
+              <div class="col-12 col-lg-4">
+                <a href="tel:+1-603-554-6041">
+                  <p class="text-center contact-button">
+                    <i class="fas fa-phone-volume"></i> (603)554-6041
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- szechuan sauce recipe -->
+
+        <!-- Mince 6 cloves of Garlic and sweat (heat them up in a skillet) -->
+        <!-- add 4 tablespoons Balsamic Vinegar -->
+        <!-- add soy sauce to taste (DO NOT USE LOW SODIUMSAUCE) -->
+        <!-- add 2 tablespoon Plum Sake (Drink additional 3 oz Plum Sake) -->
+        <!-- Reduce sauce slightly (Drink additional 1.5 oz Plum Sake) -->
+        <!-- 3 1/2 tablespoons cock sauce (Sriracha) -->
+        <!-- add 2 tablespoon brown sugar -->
+        <!-- Red pepper flakes to taste -->
+        <!-- Minced Ginger to taste Consume remaining Plum Sake -->
+
+        <!-- Simmer that shit for a solid 5 minutes, stirring pretty much constantly.
+        The brown sugar helps it keep the proper consistency, so it's important to use.
+        Play around with the recipe to your taste. Might want more or less balsamic vinegar.
+        Might want more or more Plum Sake. I'd definitely recommend you make it
+        several times to figure out your own flavor. -->
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center social-row">
         <div class="col-8">
-          <div class="row justify-content-center contactRow">
-            <div class="col-12 col-lg-4 intro1">
-              <a href="./src/Photos/resume18_4_20.pdf" download>
-                <p class="text-center contactBtn">
-                  <i class="fa fa-paperclip" aria-hidden="true"></i>
-                  Resume
-                </p>
-              </a>
-            </div>
-            <div class="col-12 col-lg-4">
-              <a href="mailto:david.j.dumas@gmail.com" target="_top">
-                <p class="text-center contactBtn">
-                  <i class="far fa-envelope"></i>
-                  david.j.dumas@gmail.com
-                </p>
-              </a>
-            </div>
-            <div class="col-12 col-lg-4">
-              <a href="tel:+1-603-554-6041">
-                <p class="text-center contactBtn">
-                  <i class="fas fa-phone-volume"></i> (603)554-6041
-                </p>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <div class="row socialRow">
+          <div class="row">
             <div class="col text-center">
               <a href="https://twitter.com/_davedev" target="_blank">
                 <i
