Polished Landing Page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <div class="row page-text">
           <div class="col">
             <p class="text-center">
-              education:<br />uc berkeley extension<br />full stack web
-              development<br />nov '18 - may '19
+              education:<br />
+              uc berkeley extension<br />full stack web development<br />nov '18
+              - may '19
             </p>
           </div>
         </div>
@@ -106,9 +107,9 @@
             </a>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center contact-row">
           <div class="col-8">
-            <div class="row justify-content-center contactRow">
+            <div class="row justify-content-center">
               <div class="col-12 col-lg-4 intro1">
                 <a href="./src/Photos/resume18_4_20.pdf" download>
                   <p class="text-center contact-button">
