--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
               Hooks, Props, State Management , JSS, Material UI, Design Patterns
             </div>
           </div>
-          <div class="col project-container">
+          <div class="col project-container last-element">
             <div class="project-title">JS Algorithms and Data Structures</div>
             <img
               class="project-image"
@@ -112,81 +112,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col text-center">
-            <div class="projectBox">
-              <p class="bottomRow projTitle"><u>Modern React Bootcamp</u></p>
-              <img
-                class="fiveStarImg"
-                src="./src/Photos/UdemyModernReact.jpg"
-                alt="Udemy Certificate"
-                />
-              </a>
-              <figcaption class="bottomRow">
-                <u>Course Highlights</u>
-                <br />
-                React concepts, Router, HOC, Hooks, Context
-                <br />
-              </figcaption>
-            </div>
-          </div>
-            <div class="col text-center">
-              <div class="projectBox">
-                <p class="bottomRow projTitle"><u>Algorithms and Data Structures</u></p>
-                <img
-                  class="fiveStarImg"
-                  src="./src/Photos/DataStructuresAlgs.jpg"
-                  alt="Udemy Certificate"
-                  />
-                </a>
-                <figcaption class="bottomRow">
-                  <u>Course Highlights</u>
-                  <br />
-                  Intro to Big O, Popular Searching/Sorting Techniques, Recursion, Tabulation, and Memoization
-                  <br />
-                </figcaption>
-              </div>
-            </div>
-          <div class="col text-center">
-            <p class="bottomRow projTitle"><u>Cistercian Numerals</u></p>
-            <a href="focused-bartik-9cafdf.netlify.app">
-              <img
-              class="fiveStarImg"
-              src="./src/Photos/CistercianNumerals.jpg"
-              alt="Cistercian Numerals"
-              />
-            </a>
-            <figcaption class="bottomRow">
-              React App Using useState Hook<br />Choose a number between 1 and 9999 
-              to see the symbol which represents the number<br />
-              React 17 | Deployed to Netlify
-              <br/>
-              <br />
-              <a class='linkTo' href="https://github.com/DDumas551/CistercianNums" target="_blank" rel="noreferrer">View the Code</a>
-              <br/>
-              <br/>
-              Personal Project || Complete MVP
-            </figcaption>
-          </div>
-          <div class="col text-center">
-            <p class="bottomRow projTitle"><u>Dissolved Solids</u></p>
-            <a href="https://github.com/DDumas551/DissolvedSolids">
-              <img
-              class="fiveStarImg"
-              src="./src/Photos/DS.jpg"
-                alt="DissolvedSolids"
-                />
-              </a>
-              <figcaption class="bottomRow">
-              Homebrewing Website<br />Will allow users to create, save, edit,
-              and delete beer recipes. Includes brewing calculators, checklists,
-              and general info on brewing <br />
-              Built in React.js with Bootstrap
-              <br />
-              Personal Project || On Hold
-            </figcaption>
-          </div>
-        </div> -->
       </div>
       <div class="row home-link">
         <div class="col text-center">
