Updates Projects Page

--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col text-center projects-page-title">Certificates</div>
         </div>
-        <div class="row">
+        <div class="row last-element">
           <div class="col project-container">
             <div class="project-title">Modern React</div>
             <img
@@ -100,7 +100,7 @@
               Hooks, Props, State Management , JSS, Material UI, Design Patterns
             </div>
           </div>
-          <div class="col project-container last-element">
+          <div class="col project-container text-center">
             <div class="project-title">JS Algorithms and Data Structures</div>
             <img
               class="project-image"
