Adds project and target prop to links

--- a/projects.html
+++ b/projects.html
@@ -57,8 +57,30 @@
             </a>
             <div class="project-description">Built in React using Hooks</div>
             <a
+              href="https://github.com/DDumas551/SimpleTurtle"
+              class="project-link"
+              target="blank"
+              >View the code</a
+            >
+          </div>
+          <div class="col project-container">
+            <div class="project-title">Simple Turtle</div>
+            <a
+              class="project-link"
+              href="https://romantic-curie-5e9bba.netlify.app/"
+              target="_blank"
+            >
+              <img
+                class="project-image"
+                src="/src/Photos/SimpleTurtle.png"
+                alt="Cistercian Numerals"
+              />
+            </a>
+            <div class="project-description">Built in React using Hooks</div>
+            <a
               href="https://github.com/DDumas551/CistercianNums"
               class="project-link"
+              target="_blank"
               >View the code</a
             >
           </div>
@@ -75,12 +97,13 @@
                 alt="Cistercian Numerals"
               />
             </p>
-            <div class="project-description">
+            <div class="project-description text-center">
               Built in React with Router | Under Construction
             </div>
             <a
               href="https://github.com/DDumas551/CistercianNums"
               class="project-link"
+              target="_blank"
               >View the code</a
             >
           </div>
@@ -140,3 +163,5 @@
     <script src="./src/JS/projects.js" async defer></script>
   </body>
 </html>
+
+CHANGE ADDRESS AT WORK
