--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
           <div class="col text-center projects-page-title">Projects</div>
         </div>
         <div class="row">
-          <div class="col project-container">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4 project-container">
             <div class="project-title">Cistercian Symbols</div>
             <a
               class="project-link"
@@ -63,7 +63,7 @@
               >View the code</a
             >
           </div>
-          <div class="col project-container">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4 project-container">
             <div class="project-title">Simple Turtle</div>
             <a
               class="project-link"
@@ -84,7 +84,7 @@
               >View the code</a
             >
           </div>
-          <div class="col project-container">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-4 project-container">
             <div class="project-title">Dissolved Solids</div>
             <p
               class="project-link"
@@ -111,8 +111,33 @@
         <div class="row">
           <div class="col text-center projects-page-title">Certificates</div>
         </div>
-        <div class="row last-element">
-          <div class="col project-container">
+        <div class="row align-items-center text-center certificates">
+          <div class="col-12 col-sm-4">University California Berkeley Ext.</div>
+          <div class="col-12 col-sm-4">Full Stack Web Development</div>
+          <div class="col-12 col-sm-4">
+            HTML5, CSS3, JavaSript ES2015, jQuery, React 16+ django, mongoDB,
+            mySQL
+          </div>
+        </div>
+        <div class="row align-items-center text-center certificates">
+          <div class="col-12 col-sm-4">Udemy | Colt Steele</div>
+          <div class="col-12 col-sm-4">Modern React Bootcamp</div>
+          <div class="col-12 col-sm-4">
+            Hooks, Context, Router, NextJS, JS Styling, Semantic UI
+          </div>
+        </div>
+        <div
+          class="row align-items-center text-center certificates last-element"
+        >
+          <div class="col-12 col-sm-4">Udemy | Colt Steele</div>
+          <div class="col-12 col-sm-4">Data Structures and Algorithms</div>
+          <div class="col-12 col-sm-4">
+            Big O notation, Recursion, Searching/Sorting algorithms, Linked
+            Lists, Heaps, Trees, Hash Tables, Graphs, Intro to Dynamic
+            Programming
+          </div>
+        </div>
+        <!-- <div class="col project-container">
             <div class="project-title">Modern React</div>
             <img
               class="project-image"
@@ -133,8 +158,7 @@
             <div class="project-description">
               Big O, Recursion, Searching/Sorting Algorithms
             </div>
-          </div>
-        </div>
+          </div> -->
       </div>
       <div class="row home-link">
         <div class="col text-center">
