Formats font, mods margins

--- a/projects.html
+++ b/projects.html
@@ -112,53 +112,36 @@
           <div class="col text-center projects-page-title">Certificates</div>
         </div>
         <div class="row align-items-center text-center certificates">
-          <div class="col-12 col-sm-4">University California Berkeley Ext.</div>
-          <div class="col-12 col-sm-4">Full Stack Web Development</div>
-          <div class="col-12 col-sm-4">
+          <div class="col-12 col-sm-4 cert-title">
+            University California Berkeley Ext.
+          </div>
+          <div class="col-12 col-sm-4 cert-desc">
+            Full Stack Web Development | 2019
+          </div>
+          <div class="col-12 col-sm-4 cert-material">
             HTML5, CSS3, JavaSript ES2015, jQuery, React 16+ django, mongoDB,
             mySQL
           </div>
         </div>
         <div class="row align-items-center text-center certificates">
-          <div class="col-12 col-sm-4">Udemy | Colt Steele</div>
-          <div class="col-12 col-sm-4">Modern React Bootcamp</div>
-          <div class="col-12 col-sm-4">
+          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
+          <div class="col-12 col-sm-4 cert-desc">
+            Modern React Bootcamp | 2020
+          </div>
+          <div class="col-12 col-sm-4 cert-material">
             Hooks, Context, Router, NextJS, JS Styling, Semantic UI
           </div>
         </div>
-        <div
-          class="row align-items-center text-center certificates last-element"
-        >
-          <div class="col-12 col-sm-4">Udemy | Colt Steele</div>
-          <div class="col-12 col-sm-4">Data Structures and Algorithms</div>
-          <div class="col-12 col-sm-4">
-            Big O notation, Recursion, Searching/Sorting algorithms, Linked
-            Lists, Heaps, Trees, Hash Tables, Graphs, Intro to Dynamic
+        <div class="row align-items-center text-center certificates">
+          <div class="col-12 col-sm-4 cert-title">Udemy | Colt Steele</div>
+          <div class="col-12 col-sm-4 cert-desc">
+            Data Structures and Algorithms | 2021
+          </div>
+          <div class="col-12 col-sm-4 cert-material">
+            Big O notation, Recursion, Searching/Sorting algorithms, Data Structures, Intro to Dynamic
             Programming
           </div>
         </div>
-        <!-- <div class="col project-container">
-            <div class="project-title">Modern React</div>
-            <img
-              class="project-image"
-              src="/src/Photos/UdemyModernReact.jpg"
-              alt="Cistercian Numerals"
-            />
-            <div class="project-description text-center">
-              Hooks, Props, State Management , JSS, Material UI, Design Patterns
-            </div>
-          </div>
-          <div class="col project-container text-center">
-            <div class="project-title">JS Algorithms and Data Structures</div>
-            <img
-              class="project-image"
-              src="/src/Photos/DataStructuresAlgs.jpg"
-              alt="Cistercian Numerals"
-            />
-            <div class="project-description">
-              Big O, Recursion, Searching/Sorting Algorithms
-            </div>
-          </div> -->
       </div>
       <div class="row home-link">
         <div class="col text-center">
